--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=Europe/Stockholm
+
 DB_CONNECTION=sqlite
 CACHE_DRIVER=array
+
+ANDROID_APP_VERSION=1.0.0
