--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,16 @@
 {
-    "name": "cbodin/veganresan-api",
-    "description": "A lumen based REST API for the Veganresan mobile application",
-    "type": "project",
-    "require": {
-        "php": ">=7.1.3",
-        "laravel/lumen-framework": "5.7.*",
-        "vlucas/phpdotenv": "~2.2"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/"
-        }
+  "name": "cbodin/veganresan-api",
+  "description": "A lumen based REST API for the Veganresan mobile application",
+  "type": "project",
+  "require": {
+    "php": ">=7.1.3",
+    "laravel/lumen-framework": "5.7.*",
+    "vlucas/phpdotenv": "~2.2",
+    "ext-json": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/"
     }
+  }
 }
